# mnamer

./: .gitignore  .travis.yml  Dockerfile  MANIFEST.in  README.md  __init__.py  __main__.py  config.py  license.txt  makefile  metadata.py  pyproject.toml  pytest.ini  query.py  readme.md  readme.rst  requirements-dev.txt  requirements-guess-all.txt  requirements-guess-fasttext.txt  requirements-guess-langdetect.txt  requirements-guess-langid.txt  requirements-guess-lingua.txt  requirements-test.txt  requirements-testing.txt  requirements.txt  setup.cfg  setup.py  tasks.py
.github/: dependabot.yml
.github/actions/init/: action.yml
.github/actions/lint/: action.yml
.github/actions/test/: action.yml
.github/workflows/: Dockerfile  publish.yml  pull_request.yml  push.yml
_images/: mnamer.psd
assets/: design.eps  logo.psd  screenshot.eps
docs/: README.md  SUMMARY.md  automation.md  configuration.md  formatting.md  migration.md
docs/development/: contributing.md  roadmap.md
mnamer/: __init__.py  __main__.py  __version__.py  args.py  argument.py  cli.py  config.py  const.py  constants.py  endpoints.py  exceptions.py  frontend.py  frontends.py  gui.py  icons.py  language.py  log.py  metadata.py  parameters.py  path.py  providers.py  query.py  setting_spec.py  setting_store.py  settings.py  target.py  targets.py  tty.py  types.py  utilities.py  utils.py
mnamer/api/: __init__.py  endpoints.py  exceptions.py  providers.py
mnamer/codes/: __init__.py  common.py  posix.py  windows.py
mnamer/core/: __init__.py  argument.py  metadata.py  settings.py  target.py  tty.py  types.py  utils.py
mnamer/io/: __init__.py  common.py  posix.py  windows.py
mnamer/text_lang_guesser/: __init__.py  base.py  fasttext.py  langdetect.py  langid.py  lingua.py
testing/: test-files-gen.py  testUtils.py
tests/: __init__.py  conftest.py  test_args.py  test_cli.py  test_config.py  test_e2e.py  test_path.py  test_settings.py  test_target.py  test_tty.py  test_unit.py  test_utils.py  unit.py  unit_test.py
tests/api/: conftest.py
tests/api/endpoints/: test_endpoints_omdb.py  test_endpoints_tmdb.py  test_endpoints_tvdb.py
tests/api/metadata/: test_metadata.py  test_metadata_movie.py  test_metadata_television.py
tests/api/providers/: test_providers.py  test_providers_omdb.py  test_providers_tmdb.py  test_providers_tvdb.py
tests/core/: conftest.py  test_e2e.py  test_settings.py  test_target.py  test_tty.py  test_utils.py
tests/e2e/: __init__.py  conftest.py  test_config.py  test_directives.py  test_errors.py  test_moving.py  test_relocation.py  test_symlink_functionality.py
tests/local/: test_argument.py  test_language.py  test_metadata.py  test_setting_spec.py  test_setting_store.py  test_settings.py  test_target.py  test_tty.py  test_utils.py
tests/network/: test_endpoints__omdb.py  test_endpoints__tmdb.py  test_endpoints__tvdb.py  test_endpoints__tvmaze.py  test_providers__omdb.py  test_providers__tmdb.py  test_providers__tvdb.py  test_providers__tvmaze.py
tests/unit/: __init__.py  test_args.py  test_argument.py  test_endpoints__omdb.py  test_endpoints__tmdb.py  test_endpoints__tvdb.py  test_endpoints__tvmaze.py  test_metadata.py  test_path.py  test_providers.py  test_providers__tvmaze.py  test_settings.py  test_target.py  test_tty.py  test_utils.py
tests/unit/api/: test_endpoints__omdb.py  test_endpoints__tmdb.py  test_endpoints__tvdb.py
tests/unit/core/: test_argument.py  test_metadata.py  test_settings.py  test_target.py  test_utils.py
tools/: gif-to-base64.py  test-files-gen.py
typings/guessit/: __init__.pyi
typings/setuptools_scm/: __init__.pyi
