[project]
name = "mnamer"
description = "A command-line utility for organizing media files."
authors = [{ name = "Jessy Williams", email = "jessy@jessywilliams.com" }]
maintainers = [{ name = "Jessy Williams", email = "jessy@jessywilliams.com" }]
license = { file = "LICENSE.txt" }
requires-python = ">=3.10"
dynamic = ["version", "dependencies", "optional-dependencies"]
scripts = { mnamer = "mnamer.__main__:main" }
urls = { repository = "https://github.com/jkwill87/mnamer" }
readme = "README.md"

[tool.setuptools]
packages = ["mnamer"]

[tool.setuptools.package-data]
"*" = ["LICENSE.txt", "README.md", "py.typed"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.setuptools.dynamic.optional-dependencies]
dev = { file = "requirements-dev.txt" }

[build-system]
requires = ["setuptools >= 61.0.0", "setuptools_scm[toml] >= 6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.pyright]
reportGeneralTypeIssues = "information"
pythonVersion = "3.10"
include = ["mnamer"]
exclude = ["playground.py", "venv"]
venv = ["venv"]

[tool.isort]
profile = "black"
py_version = 38
line_length = 88
known_first_party = "mnamer"
combine_star = true
combine_straight_imports = false
overwrite_in_place = true

[tool.pylint.messages_control]
max-line-length = 88
disable = ["C0103", "C0114", "C0116", "C0209", "E0401", "R0801"]

[tool.mypy]
incremental = false
python_version = "3.10"

[tool.setuptools_scm]
local_scheme = "dirty-tag"
write_to = "mnamer/__version__.py"
write_to_template = '''# file generated by setuptools_scm
# don't change, don't track in version control

__version__ = "{version}"
'''
