[metadata]
name = mnamer
version = attr: mnamer.__version__.VERSION
description = A media file organiser
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jkwill87/mnamer

license = MIT
license_files = LICENSE.txt

author = Jessy Williams
author_email = jessy@jessywilliams.com
maintainer = Jessy Williams
maintainer_email = jessy@jessywilliams.com

[options]
python_requires = >=3.7

packages = find:

install_requires =
    appdirs==1.4.*
    babelfish==0.6.*
    guessit==3.2.*
    requests_cache~=0.9.1
    requests==2.*
    teletype>=1.1.0,<1.4.0

[options.entry_points]
console_scripts =
    mnamer = mnamer.__main__:main

[options.package_data]
* = LICENSE.txt,README.md,py.typed


[options.extras_require]
dev =
    black==22.1.*
    build~=0.7.0
    isort==5.10.*
    mypy~=0.931
    pylint==2.12.*
    twine==3.7.*
    types-requests==2.*
    vbump==1.2.*
    wheel~=0.37.1

test =
    codecov==2.1.*
    pytest-cov==3.0.*
    pytest-rerunfailures==10.2
    pytest==6.2.*